--- a/pom.xml
+++ b/pom.xml
@@ -45,15 +45,15 @@
   
   <distributionManagement>
 	<repository>
-		<id>deploymentRepo</id>
+		<id>nexusdeploymentRepo</id>
 		<name>Internal Releases</name>
-		<url>http://35.193.152.132:8081/repository/maven-releases/</url>
+		<url>http://192.168.1.210:8081/repository/maven-releases/</url>
 	</repository>
  
 	<snapshotRepository>
-		<id>deploymentRepo</id>
+		<id>nexusdeploymentRepo</id>
 		<name>Internal Releases</name>
-		<url>http://35.193.152.132:8081/repository/maven-snapshots/</url>
+		<url>http://192.168.1.210:8081/repository/maven-snapshots/</url>
 	</snapshotRepository>
 
 </distributionManagement>
